--- a/flask/templates/input_id.html
+++ b/flask/templates/input_id.html
@@ -1,9 +1,15 @@
 <!-- 引入样式 -->
 <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 <div id="app">
+    <el-menu :default-active="activeIndex" class="el-menu-demo" mode="horizontal" @select="handleSelect">
+        <el-menu-item index="1">
+            <h2>在线肿瘤诊断系统</h2>
+        </el-menu-item>
+    </el-menu>
     <form name="input_id" action="/input_id/" method="post">
-        输入id: <input type="text" name="txt_id" />
-        <input type="submit" value="提交" @click='showimg = true'>
+        输入id:
+        <el-input type="text" name="txt_id"></el-input>
+        <el-input type="submit" value="提交" @click='showimg = true'></el-input>
     </form>
     <div v-if='showimg'>
         <p>肝癌概率为：{{ pred }}</p>
